--- a/src/frontend/src/components/snippet/snippet.css
+++ b/src/frontend/src/components/snippet/snippet.css
@@ -6,6 +6,7 @@
     flex-direction: row;
     justify-content: center;
     margin-bottom: 20px;
+    margin-top: 10px;
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -110,6 +111,8 @@
 /* Snippets body */
 
 .snippetsBody {
+    background-color: #303030;
+    padding-top: 20px;
     padding-left: 2vw;
     padding-right: 2vw;
 }
