HoverSelect more pretty

--- a/src/frontend/src/app.css
+++ b/src/frontend/src/app.css
@@ -52,4 +52,9 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
+
+.browserRouter {
+    background-color: #303030; 
+    scrollbar-width: thin;
+}
   
