--- a/src/frontend/commonComponents/hoverSelect/hoverSelect.css
+++ b/src/frontend/commonComponents/hoverSelect/hoverSelect.css
@@ -129,3 +129,8 @@
     margin-right: 8px;
     vertical-align: middle;
 }
+
+.hoverSelect .groupName {
+    background-color: white;
+    color: black;
+}
