--- a/src/frontend/components/snippet/snippet.css
+++ b/src/frontend/components/snippet/snippet.css
@@ -147,7 +147,6 @@
 }
 
 .snippetButtons {
-    width: 1rem;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -183,14 +182,14 @@
 /* Comments */
 
 .commentButton {
-    height: 1.5rem;
     cursor: pointer;
-    font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Arial Narrow', Arial, sans-serif;
     border-width: 1px;
     border-style: solid;
+    border-top-left-radius: 50%;
     background-color: black;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    text-align: center;
+    padding: 6px;
 }
 
 .snippetFooter { 
