--- a/src/frontend/components/snippet/snippet.css
+++ b/src/frontend/components/snippet/snippet.css
@@ -77,7 +77,7 @@
 }
 
 .snippetLeftHeader {
-    width: 40vw;
+    width: 41vw;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -87,13 +87,12 @@
     border-top-left-radius: 12px;
     border-width: 1px;
     border-color: #20C020;
-    padding: 5px;
-    font-size: 1.2em;
+    font-size: 1.2rem;
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
 }
 
 .snippetRightHeader {
-    width: 40vw;
+    width: 41vw;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -103,8 +102,7 @@
     border-top-right-radius: 12px;
     border-width: 1px;
     border-color: #ba9510;
-    padding: 5px;
-    font-size: 1.2em;
+    font-size: 1.2rem;
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -119,8 +117,8 @@
 .snippetsBody {
     background-color: #303030;
     padding-top: 20px;
-    padding-left: 2vw;
-    padding-right: 2vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
 
 .snippetsContainer {
@@ -158,11 +156,11 @@
 }
 
 .snippetContent {
-    width: 40vw;
+    width: 41vw;
     border-style: solid;
     border-width: 1px;
     border-top-width: 0;
-    padding: 5px;
+
 }
 
 .snippetCode {
@@ -186,10 +184,12 @@
     font-family: 'Arial Narrow', Arial, sans-serif;
     border-width: 1px;
     border-style: solid;
-    border-top-left-radius: 50%;
-    background-color: black;
+    border-radius: 50%;
+    background-color: white;
+    color: black;
     text-align: center;
-    padding: 6px;
+    font-size: 0.6rem;
+    padding: 3px;
 }
 
 .snippetFooter { 
