--- a/src/frontend/components/snippet/snippet.css
+++ b/src/frontend/components/snippet/snippet.css
@@ -70,7 +70,9 @@
 
 .taskForHeader {
     width: 16vw;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-bottom-style: solid;
     border-bottom-width: 1px;    
     border-color: #707070;
@@ -138,7 +140,7 @@
     background-color: #303030;
 }
 
-.snippetContentContainer {
+.snippetCodeContainer {
     display: flex;
     flex-direction: row;
     padding: 5px;
@@ -160,10 +162,10 @@
     border-style: solid;
     border-width: 1px;
     border-top-width: 0;
-
 }
 
 .snippetCode {
+    margin: 5px;
     font-family: monospace;
     white-space: pre-wrap;
 }
@@ -189,6 +191,7 @@
     color: black;
     text-align: center;
     font-size: 0.6rem;
+    margin: 5px;
     padding: 3px;
 }
 
