--- a/src/frontend/commonComponents/hoverSelect/hoverSelect.css
+++ b/src/frontend/commonComponents/hoverSelect/hoverSelect.css
@@ -142,3 +142,12 @@
     border-bottom-style: double;
     border-bottom-width: 2px;
 }
+
+.hoverSelectSmall {
+    position: relative;
+    color: black;
+    perspective: 800px;
+    min-width: 200px;
+    height: 1.5rem;
+    cursor: pointer;
+}
