--- a/src/frontend/components/snippet/snippet.css
+++ b/src/frontend/components/snippet/snippet.css
@@ -59,6 +59,71 @@
     border-top-left-radius: 10px;
 }
 
+
+/* Snippets body */
+
+.snippetsBody {
+    background-color: hsl(0, 0%, 18%);
+    padding-top: 20px;
+    padding-left: 1vw;
+    padding-right: 1vw;
+}
+
+.snippetsContainer {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    width: 100%;
+}
+
+.snippetRow {
+    display: flex;
+    flex-direction: row;
+    align-content: stretch;
+    width: 100%;
+    min-height: 4rem;
+    background-color: #303030;
+}
+
+.snippetCodeContainer {
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+}
+
+.snippetButtons {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.snippetButtonsRight {
+    margin-left: auto;
+}
+
+.snippetContent {
+    width: 41vw;
+    border-style: solid;
+    border-width: 1px;
+    border-top-width: 0;
+}
+
+.snippetCode {
+    margin: 5px;
+    font-family: monospace;
+    white-space: pre-wrap;
+}
+
+.taskContainer {
+    width: 16vw;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-color: #707070;
+    min-height: 4em;
+    text-align: center;
+}
+
 /* Body header */
 
 .snippetsHeader {
@@ -112,71 +177,6 @@
     height: 2rem;
     margin: 0;
     padding: 0;
-}
-
-/* Snippets body */
-
-.snippetsBody {
-    background-color: #303030;
-    padding-top: 20px;
-    padding-left: 1vw;
-    padding-right: 1vw;
-}
-
-.snippetsContainer {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    width: 100%;
-    /* overflow-y: scroll; */
-}
-
-.snippetRow {
-    display: flex;
-    flex-direction: row;
-    align-content: stretch;
-    width: 100%;
-    min-height: 4rem;
-    background-color: #303030;
-}
-
-.snippetCodeContainer {
-    display: flex;
-    flex-direction: row;
-    padding: 5px;
-}
-
-.snippetButtons {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.snippetButtonsRight {
-    margin-left: auto;
-}
-
-.snippetContent {
-    width: 41vw;
-    border-style: solid;
-    border-width: 1px;
-    border-top-width: 0;
-}
-
-.snippetCode {
-    margin: 5px;
-    font-family: monospace;
-    white-space: pre-wrap;
-}
-
-.taskContainer {
-    width: 16vw;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-color: #707070;
-    min-height: 4em;
-    text-align: center;
 }
 
 /* Comments */
