--- a/src/frontend/components/alternative/Alternative.css
+++ b/src/frontend/components/alternative/Alternative.css
@@ -22,11 +22,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #40FF40;
+    color: hsl(120, 100%, 62%);
+    align-items: center;
     border-style: solid;
     border-top-left-radius: 12px;
     border-width: 1px;
-    border-color: #20C020;
+    border-color: hsl(120, 71%, 43%);    
     font-size: 1.2rem;
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
 }
@@ -85,4 +86,15 @@
 .alternativeTimestamp {
     font-weight: bold;
     color: green;
+}
+
+.alternativeButtons {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.alternativeItem {
+    color: white;
 }
