--- a/public/global.css
+++ b/public/global.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-	color: #333;
+	color: hsl(0, 0%, 18%);
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
@@ -36,28 +36,28 @@ input, button, select, textarea {
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 75%);
 	border-radius: 2px;
 }
 
 input:disabled {
-	color: #ccc;
+	color: hsl(0, 0%, 75%);
 }
 
 button {
-	color: #333;
-	background-color: #f4f4f4;
+	color: hsl(0, 0%, 18%);
+	background-color: hsl(0, 0%, 95%);
 	outline: none;
 }
 
 button:disabled {
-	color: #999;
+	color: hsl(0, 0%, 56%);
 }
 
 button:not(:disabled):active {
-	background-color: #ddd;
+	background-color: hsl(0, 0%, 81%);
 }
 
 button:focus {
-	border-color: #666;
+	border-color: hsl(0, 0%, 37%);
 }
