--- a/src/frontend/app.css
+++ b/src/frontend/app.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: hsl(220, 13%, 18%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: hsl(192, 95%, 68%);
 }
 
 @keyframes App-logo-spin {
@@ -39,7 +39,7 @@
 
 
 body {
-    background-color: #FFFFFF;
+    background-color: white;
     margin: 0;
     font-family: 'Fira Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Droid Sans', 'Helvetica Neue',
@@ -54,7 +54,7 @@ body {
   }
 
 .browserRouter {
-    background-color: #303030; 
+    background-color: hsl(0, 0%, 18%); 
     scrollbar-width: thin;
 }
   
