--- a/src/frontend/components/admin/admin.css
+++ b/src/frontend/components/admin/admin.css
@@ -1,18 +1,18 @@
 .newProposal {
-    background-color: #303030;
+    background-color: hsl(0, 0%, 18%);
     margin-top: 30px;
     color: white;
 }
 
 .adminAlternative {
-    background-color: #303030;
+    background-color: hsl(0, 0%, 18%);
     color: white;
     margin-top: 30px;
 }
 
 .adminContainer {
     overflow: scroll; 
-    background-color: #303030;
+    background-color: hsl(0, 0%, 18%);
 }
 
 
