--- a/src/frontend/components/snippet/snippet.css
+++ b/src/frontend/components/snippet/snippet.css
@@ -13,7 +13,7 @@
 .adminHeader {
     width: 150px;
     height: 3em;
-    color: #F0F0F0;
+    color: hsl(0, 0%, 94%);
     border-style: groove;
     border-width: 1px;
     padding: 8px;
@@ -82,7 +82,7 @@
     align-content: stretch;
     width: 100%;
     min-height: 4rem;
-    background-color: #303030;
+    background-color: hsl(0, 0%, 18%);
 }
 
 .snippetCodeContainer {
@@ -119,7 +119,7 @@
     width: 16vw;
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    border-color: #707070;
+    border-color: hsl(0, 0%, 43%);
     min-height: 4em;
     text-align: center;
 }
@@ -140,7 +140,7 @@
     justify-content: center;
     border-bottom-style: solid;
     border-bottom-width: 1px;    
-    border-color: #707070;
+    border-color: hsl(0, 0%, 43%);
 }
 
 .snippetLeftHeader {
@@ -149,11 +149,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #40FF40;
+    color: hsl(120, 100%, 62%);
     border-style: solid;
     border-top-left-radius: 12px;
     border-width: 1px;
-    border-color: #20C020;
+    border-color: hsl(120, 71%, 43%);
     font-size: 1.2rem;
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
 }
@@ -164,11 +164,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #FFFF30;
+    color: hsl(60, 100%, 59%);
     border-style: solid;
     border-top-right-radius: 12px;
     border-width: 1px;
-    border-color: #ba9510;
+    border-color: hsl(46, 84%, 39%);
     font-size: 1.2rem;
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
 }
@@ -197,7 +197,7 @@
 
 .snippetFooter { 
     margin-bottom: 20px;
-    background-color: #303030;
+    background-color: hsl(0, 0%, 18%);
 }
 
 
@@ -208,21 +208,21 @@ p {
 
 select {
     border-radius: 8px;
-    background-color: #303030;
+    background-color: hsl(0, 0%, 18%);
     color: white;
     padding-left: 5px;
 }
 
 .evenRow {
-    background-color: #404040;
+    background-color: hsl(0, 0%, 25%);
 }
 
 .leftSide {
-    border-color: #20C020;
+    border-color: hsl(120, 71%, 43%);
 }
 
 .rightSide {
-    border-color: #ba9510;
+    border-color: hsl(46, 84%, 39%);
 }
 
 /* a tag corrections */
@@ -251,7 +251,7 @@ a:visited {
 }
 
 .snippetButton {
-    background-color: #303030;
+    background-color: hsl(0, 0%, 18%);
     border-color: white;
     border-style: groove;
     border-width: 1px;
