--- a/src/frontend/components/alternative/Alternative.css
+++ b/src/frontend/components/alternative/Alternative.css
@@ -12,16 +12,20 @@
 
 .alternativeHeader {
     display: block;
-    min-height: 2.5em;
+    min-height: 6rem;
+    max-height: 9rem;
     width: 96vw;
     border-style: solid;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     border-width: 1px;
+    border-bottom-width: 0;
+    position: sticky;
 }
 
 .alternativeHeaderTitle {
     text-align: center;
+    font-size: 1.5rem;
     width: 100%;
 }
 
@@ -32,36 +36,43 @@
 }
 
 .alternativeHeaderMainLeft {
-    width: 40vw;
-    text-align: center;           
+    width: 60vw;
+    text-align: center;
     color: hsl(120, 100%, 62%);
-    
-    border-color: hsl(120, 71%, 43%);    
-    font-size: 1.2rem;
-    font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
+    border-color: hsl(120, 71%, 43%);
+    height: 100%;
+}
+
+.alternativeHeaderMainLeftCode {
+    font-family: Monospace, Arial, sans-serif;
+    background-color: black;
+    border-radius: 0.4rem;
+    padding: 1rem;
+    margin-right: 1rem;
+    text-align: left;    
+}
+
+.alternativeHeaderMainMid {
+    width: 20vw;
 }
 
 .alternativeHeaderMainRight {
-    width: 40vw;
+    width: 10vw;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: hsl(60, 100%, 59%);
-    border-style: solid;
-    border-width: 1px;
-    border-color: hsl(46, 84%, 39%);
     font-size: 1.2rem;
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
 }
 
-.alternativeRow {
-    display: flex;
-    flex-direction: row;
-    align-content: stretch;
-    width: 100%;
-    min-height: 4rem;
-    background-color: hsl(0, 0%, 30%);    
+.alternativeHeaderMainFooter {
+    padding: 1rem;
+}
+
+.alternativeHeaderMainFooter span {
+    margin-right: 1rem;
 }
 
 .alternativeLeftSide {
@@ -72,15 +83,6 @@
     border-color: hsl(46, 84%, 39%);
 }
 
-.alternativeTimestampContainer {
-    width: 16vw;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-color: hsl(0, 0%, 43%);
-    min-height: 4em;
-    text-align: center;
-}
-
 .alternativeTimestamp {
     font-weight: bold;
     color: green;
@@ -89,21 +91,28 @@
 .alternativeButtons {
     height: 100%;
     display: flex;
+    
     flex-direction: column;
     justify-content: space-around;
 }
 
 .alternativeItem {
-    border-bottom-style: solid;
-    border-bottom-color: hsl(0, 0%, 70%);
-    border-bottom-width: 1px;
-    margin-top: 0.5rem;
-    padding: 1rem;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
+    border-bottom-width: 0;
+    padding: 1rem; 
     color: white;
+    width: 93vw;
 }
 
 .alternativeItemCode {
+    margin-right: 4vw;
     margin-bottom: 10px;
+    padding: 5px;
+    padding-bottom: 1rem;    
+    background-color: black;
+    border-radius: 0.4rem;
 }
 
 .alternativeItemPrimary {
@@ -127,14 +136,39 @@
 
 .alternativeItemFooter span {
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .alternativeItemComments {
     border-width: 1px;
     border-style: solid;
+    border-radius: 1rem;
+    margin-top: 0.5rem;
+    padding: 0.5rem;
     border-color: hsl(0, 0%, 58%);
 }
 
 .alternativeItemCommentsComment {
     margin-bottom: 10px;
+}
+
+.alternativeItemButton {
+    cursor: pointer;
+    font-family: 'Arial Narrow', Arial, sans-serif;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 50%;
+    background-color: white;
+    color: black;
+    text-align: center;
+    font-size: 0.6rem;
+    margin: 5px;
+    padding: 3px;
+}
+
+.alternativeFooter {
+    height: 2rem;
+    border-top-width: 1px;
+    border-top-style: solid;
+    width: 96vw;
 }
