--- a/src/frontend/components/alternative/Alternative.css
+++ b/src/frontend/components/alternative/Alternative.css
@@ -37,19 +37,22 @@
 
 .alternativeHeaderMainLeft {
     width: 60vw;
-    text-align: center;
-    color: hsl(120, 100%, 62%);
+    text-align: center;    
     border-color: hsl(120, 71%, 43%);
     height: 100%;
 }
 
 .alternativeHeaderMainLeftCode {
     font-family: Monospace, Arial, sans-serif;
+    color: hsl(120, 100%, 62%);
     background-color: black;
     border-radius: 0.4rem;
     padding: 1rem;
     margin-right: 1rem;
-    text-align: left;    
+    text-align: left;
+    white-space: pre-line;
+    max-height: 3rem;
+    overflow-y: auto;
 }
 
 .alternativeHeaderMainMid {
@@ -101,18 +104,20 @@
     border-color: white;
     border-width: 1px;
     border-bottom-width: 0;
-    padding: 1rem; 
     color: white;
-    width: 93vw;
+    width: 96vw;
 }
 
 .alternativeItemCode {
     margin-right: 4vw;
+    margin-left: 1rem;
     margin-bottom: 10px;
     padding: 5px;
     padding-bottom: 1rem;    
     background-color: black;
+    color: hsl(120, 100%, 62%);
     border-radius: 0.4rem;
+    white-space: pre-line;
 }
 
 .alternativeItemPrimary {
@@ -128,10 +133,15 @@
 
 .alternativeItemHeader {
     margin-bottom: 10px;
+    margin-left: 1rem;
 }
 
 .alternativeItemHeader span {
     margin-right: 10px;
+}
+
+.alternativeItemFooter {
+    margin-bottom: 1rem;
 }
 
 .alternativeItemFooter span {
@@ -139,17 +149,25 @@
     cursor: pointer;
 }
 
-.alternativeItemComments {
+.alternativeItemComments {    
+    margin-top: 0.5rem;
+    padding: 0.5rem;    
+}
+
+.alternativeItemCommentsComment {    
+    margin-bottom: 10px;
+}
+
+.alternativeItemCommentsAuthor {
     border-width: 1px;
     border-style: solid;
-    border-radius: 1rem;
-    margin-top: 0.5rem;
-    padding: 0.5rem;
+    border-radius: 0.2rem;
     border-color: hsl(0, 0%, 58%);
 }
 
-.alternativeItemCommentsComment {
-    margin-bottom: 10px;
+.alternativeItemCommentsText {
+    margin-top: 0.6rem;
+    margin-bottom: 0.6rem;
 }
 
 .alternativeItemButton {
@@ -170,5 +188,5 @@
     height: 2rem;
     border-top-width: 1px;
     border-top-style: solid;
-    width: 96vw;
+    width: calc(96vw + 2px);
 }
