--- a/src/frontend/components/admin/admin.css
+++ b/src/frontend/components/admin/admin.css
@@ -17,16 +17,41 @@
 
 
 /* Proposals */
-.proposal {
-    min-width: 40%;
-    max-width: 50%;
+.newProposals {
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
-    font-size: 2rem;
+    font-size: 1rem;
     white-space: normal;
-    cursor: pointer;
-    text-align: center;
+    padding: 5px;
+    color: white;
+    margin-bottom: 2rem;
+}
+
+.proposalContainer {
     border-style: solid;
     border-width: 1px;
-    border-top-width: 0;
-    padding: 5px;
+    border-color: white;
+}
+
+.proposalHeaderContainer {
+    display: flex;
+    flex-direction: row;
+    background-color: hsl(0, 0%, 35%);
+    align-items: center;
+}
+
+.proposalHeaderContainer div {
+    margin-right: 1rem;    
+}
+
+.proposalHeaderRight {
+    margin-left: auto;
+    cursor: pointer;
+    border-radius: 50%;
+    border-style: solid;
+}
+
+.proposalBody {
+    display: block;
+    padding: 0.5rem;
+    color: hsl(120, 100%, 70%);
 }
