--- a/src/frontend/commonComponents/hoverSelect/hoverSelect.css
+++ b/src/frontend/commonComponents/hoverSelect/hoverSelect.css
@@ -42,30 +42,25 @@
 
 .hoverSelectMenu {
     position: absolute;
-
-
     opacity: 0;
     pointer-events: none;
-    transform: translateY(-10px);
-    
-    
+    transform: translateY(-10px);       
 }
 
 .hoverSelectMenuActive {
     opacity: 1;
     transform: translateY(0);
     pointer-events: auto;
-
     transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
 
     overflow: auto;
-    overflow-y: auto;    
     width: 100%;
     top: calc(100% + 0.25rem);
-    /* box-shadow: 0 2px 5px 0 hsla(0, 100, 100, 0.8); */
-    max-height: 13rem;    
+    max-height: 13rem;
     margin: 0px;
     border-top: none;
+    min-height: 7rem;
+    background-color: hsl(240, 40%, 90%);
 }
 
 .hoverSelect ul.list {
@@ -150,4 +145,52 @@
     min-width: 200px;
     height: 1.5rem;
     cursor: pointer;
+}
+
+/* HoverSelectInput */
+.hoverSelectInputContainer {
+    position: relative;
+}
+
+.hoverSelectInputFields {
+    z-index: 100;
+    color: black;
+}
+
+.hoverSelectInputMenu {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);       
+}
+
+.hoverSelectInputMenuActive {
+    opacity: 1;
+    position: absolute;
+    transform: translateY(0);
+    pointer-events: auto;
+    transition: transform 500ms ease-in-out, opacity 500ms ease-in-out;
+
+    overflow: auto;
+    width: 100%;
+    top: calc(100%);
+    max-height: 13rem;
+    margin: 0px;
+    border-top: none;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    min-height: 7rem;
+    background-color: white;
+}
+
+.hoverSelectInputField {
+    margin: 0.2rem;
+    padding: 0.3rem;
+    cursor: pointer;
+    font-size: 1rem;
+    border-style: solid;
+    border-width: 1px;
+    background-color: white;
+    border-color: black;
 }
