--- a/src/frontend/core/commonComponents/hoverSelect/hoverSelect.css
+++ b/src/frontend/core/commonComponents/hoverSelect/hoverSelect.css
@@ -44,18 +44,17 @@
     position: absolute;
     opacity: 0;
     pointer-events: none;
-    transform: translateY(-10px);       
+    transform: translateY(20px);       
 }
 
 .hoverSelectMenuActive {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(-5px);
     pointer-events: auto;
-    transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
-
+    transition: transform 100ms ease-in-out, opacity 100ms ease-in-out;
     overflow: auto;
     width: 100%;
-    top: calc(100% + 0.25rem);
+    top: calc(100%);
     max-height: 13rem;
     margin: 0px;
     border-top: none;
@@ -72,7 +71,7 @@
     height: 0px;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    transition: all 0.3s ease;
+    transition: all 0.1s ease;
     opacity: 1;
     width: 100%;
     height: 100%;
@@ -100,7 +99,6 @@
 .hoverSelect ul.optgroup li {
     padding: 4px;
     background-color: white;
-    /* border-radius: 6px; */
 }
 
 .hoverSelect ul.optgroup li:hover {
@@ -112,7 +110,7 @@
     display: block;
     padding-left: 15px;
     line-height: 2em;
-    transition: all 0.3s ease;
+    transition: all 0.1s ease;
 }
 
 .hoverSelect ul.optgroup li label:before {
@@ -169,7 +167,7 @@
     position: absolute;
     transform: translateY(0);
     pointer-events: auto;
-    transition: transform 500ms ease-in-out, opacity 500ms ease-in-out;
+    transition: transform 100ms ease-in-out, opacity 100ms ease-in-out;
 
     overflow: auto;
     width: 100%;
