--- a/src/frontend/core/components/snippet/snippet.css
+++ b/src/frontend/core/components/snippet/snippet.css
@@ -245,6 +245,24 @@ a:visited {
 }
 
 /* Text input */
+.snippetTextInput {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.snippetPlusButton {
+    border-radius: 40%;
+    border-color: white;
+    border-style: solid;
+    padding: 0.3rem;
+    margin: 0.2rem;
+    border-width: 1px;
+    cursor: pointer;
+}
+
 .snippetTextArea {
     height: 4rem;
     width: max-content;
