--- a/src/frontend/core/components/admin/admin.css
+++ b/src/frontend/core/components/admin/admin.css
@@ -44,13 +44,21 @@
     margin-left: 0.5rem;
 }
 
+.proposalHeaderRight {
+    display: inline-flex;
+}
+
 .proposalHeaderContainer .proposalHeaderRight {
-    margin-left: auto;
+    margin-left: auto;                
+}
+
+.proposalHeaderButton {
     cursor: pointer;
-    border-radius: 50%;
-    border-style: solid;
+    margin-right: 0.5rem;
     font-size: 0.8rem;
     padding: 0.4rem;
+    border-radius: 50%;
+    border-style: solid;
     border-width: 1px;
 }
 
