--- a/src/frontend/core/components/alternative/Alternative.css
+++ b/src/frontend/core/components/alternative/Alternative.css
@@ -6,14 +6,12 @@
     display: flex;
     flex-direction: column;
     color: white;
-    width: 100%;
-    height: 100%;
+    overflow-y: scroll;
 }
 
 .alternativeHeader {
     display: block;
     min-height: 6rem;
-    max-height: 9rem;
     width: 96vw;
     border-style: solid;
     border-top-left-radius: 1rem;
@@ -51,7 +49,6 @@
     margin-right: 1rem;
     text-align: left;
     white-space: pre-line;
-    max-height: 3rem;
     overflow-y: auto;
 }
 
