User voting & alternative update

--- a/src/frontend/core/components/alternative/Alternative.css
+++ b/src/frontend/core/components/alternative/Alternative.css
@@ -131,6 +131,7 @@
 .alternativeItemHeader {
     margin-bottom: 10px;
     margin-left: 1rem;
+    font-size: 0.8rem;
 }
 
 .alternativeItemHeader span {
