--- a/src/frontend/core/commonComponents/dialog/dialog.css
+++ b/src/frontend/core/commonComponents/dialog/dialog.css
@@ -57,3 +57,13 @@
     justify-content: center;
     align-items: center;
 }
+
+/* Fullscreen */
+.dialogFullscreenContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: hsla(0, 0%, 0%, 0.32);
+}
