--- a/src/frontend/core/commonComponents/dialog/dialog.css
+++ b/src/frontend/core/commonComponents/dialog/dialog.css
@@ -7,6 +7,7 @@
     background: hsla(0, 0%, 0%, 0.32);
 }
 
+
 .dialogContainer {
     position: fixed;
     background: white;
@@ -18,6 +19,15 @@
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
+}
+
+.dialogContainerFullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    background: hsla(0, 0%, 32%);
 }
 
 .dialogActive {
