--- a/src/frontend/core/commonComponents/dialog/dialog.css
+++ b/src/frontend/core/commonComponents/dialog/dialog.css
@@ -21,14 +21,6 @@
     flex-direction: column;
 }
 
-.dialogContainerFullscreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100%;
-    background: hsla(0, 0%, 32%);
-}
 
 .dialogActive {
     display: block;
@@ -69,11 +61,21 @@
 }
 
 /* Fullscreen */
-.dialogFullscreenContainer {
-    position: fixed;
-    top: 0;
-    left: 0;
+
+
+.dialogContainerFullscreen {
     width: 100vw;
-    height: 100vh;
-    background: hsla(0, 0%, 0%, 0.32);
+    height: 100%;
+    color: white;
+    background: hsla(0, 0%, 32%);
+    display: flex;
+    flex-direction: column;
+}
+
+.dialogFullscreenChildren {
+    flex: 10;
+}
+
+.dialogTitle {
+
 }
