--- a/src/frontend/core/components/profile/profile.css
+++ b/src/frontend/core/components/profile/profile.css
@@ -29,10 +29,12 @@
 .profileHeader {
     border-bottom: solid 1px white;
     padding-bottom: 0;
+    position: relative;
 }
 
 .profileHeader h2 {
     text-decoration: underline;
+    padding-top: 1rem;
 }
 
 .profileBackground {
@@ -44,4 +46,17 @@
     flex-direction: column;
     align-items: center;    
     justify-content: flex-start;
+}
+
+.profileChangePasswordButton {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    border: solid 1px white;
+    border-radius: 50%;
+    padding: 0.3rem;
+}
+
+.clickable {
+    cursor: pointer;
 }
