--- a/src/frontend/core/components/profile/profile.css
+++ b/src/frontend/core/components/profile/profile.css
@@ -60,3 +60,17 @@
 .clickable {
     cursor: pointer;
 }
+
+.profileButtons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.profileButtons div {
+    border: solid 1px white;
+    border-radius: 0.3rem;
+    padding: 0.2rem;
+}
