--- a/src/frontend/core/components/admin/admin.css
+++ b/src/frontend/core/components/admin/admin.css
@@ -154,4 +154,22 @@
 
 .adminChangePw {
     color: white;
+    width: 60vw;
+}
+
+.adminChangePwBlock {
+    margin-top: 1rem;
+}
+
+.adminChangePwButtons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.adminChangePwButtons div {
+    border: solid 1px white;
+    border-radius: 0.3rem;
+    padding: 0.2rem;
+    color: white;
 }
