--- a/src/frontend/core/components/alternative/Alternative.css
+++ b/src/frontend/core/components/alternative/Alternative.css
@@ -118,6 +118,7 @@
     color: hsl(120, 100%, 62%);
     border-radius: 0.3rem;
     white-space: pre-line;
+    font-family: monospace;
 }
 
 .alternativeItemPrimary {
@@ -162,13 +163,15 @@
     padding: 0.5rem;    
 }
 
+
+.alternativeItemCommentsHeader {
+    font-size: 0.9rem;
+}
+
 .alternativeItemCommentsComment {    
     margin-bottom: 10px;
 }
 
-.alternativeItemCommentsAuthor {
-    border-bottom: solid 1px hsl(0, 0%, 58%);
-}
 
 .alternativeItemCommentsSmall {
     font-size: 0.8rem;
@@ -210,21 +213,22 @@
 .alternativeDialogButtons {
     height: 50px;
     width: 100%;
-    display: inline-flex;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;    
 }
 
 .alternativeDialogButton {
-    height: 100%;
-    width: 50%;
-    margin: 0;
+    padding: 0.3rem;
+    border: solid 1px black;
+    border-radius: 0.3rem;
     background-color: white;
     color: black;
-    display: flex;
-    border: solid 1px black;
+    display: flex;    
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .alternativeDialogTextareaContainer {
@@ -248,4 +252,17 @@
     border: solid 1px white;
     border-radius: 0.3rem;
     padding: 0.2rem;
+}
+
+.alternativeDialogUsername {
+    text-decoration: underline;
+}
+
+.alternativeDialogCode {
+    color: hsl(120, 100%, 62%);
+    background-color: black;
+    color: green;
+    margin: 5px;
+    font-family: monospace;
+    white-space: pre-wrap;
 }
