--- a/src/frontend/core/components/snippet/snippet.css
+++ b/src/frontend/core/components/snippet/snippet.css
@@ -226,6 +226,13 @@ select {
     border-color: hsl(46, 84%, 39%);
 }
 
+.snippetProposalButton {
+    padding: 0.2rem;
+    border-radius: 0.3rem;
+    border: solid 1px white;
+    cursor: pointer;
+}
+
 /* a tag corrections */
 a {
     text-decoration: none;
