--- a/src/frontend/core/commonComponents/login/Login.css
+++ b/src/frontend/core/commonComponents/login/Login.css
@@ -13,5 +13,16 @@
 }
 
 .loginFormButtons {
+    display: flex;
     margin-bottom: 0.5rem;
+    justify-content: space-evenly;
+}
+
+.loginFormButton {
+    background-color: hsl(0, 0%, 18%);
+    border-radius: 0.3rem;
+    border: groove 1px white;
+    color: white;
+    padding: 5px;
+    cursor: pointer;
 }
