--- a/src/frontend/core/components/proposalInput/proposalInput.css
+++ b/src/frontend/core/components/proposalInput/proposalInput.css
@@ -1,7 +1,5 @@
-
-/* Text input */
 .proposalInputContainer {
-    height: 100%;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,11 +8,20 @@
 }
 
 
-.proposalInputTextArea {
-    height: 4rem;
+.proposalInputBlock {
+    margin-bottom: 1rem;
     width: 100%;
-    max-width: 90%;
-    max-height: 4rem;
+}
+
+.proposalInputBlockText {
+    flex: 10;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+.proposalInputTextArea {
+    height: 100%;
+    width: 90%;
     font-size: 1rem;
     margin: 0.3rem;
 }
@@ -24,6 +31,8 @@
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .proposalInputButton {
@@ -40,12 +49,7 @@
     color: hsl(120, 71%, 43%);
 }
 
-.proposalInputBlock {
-    margin-bottom: 1rem;
-    width: 100%;
-}
 
 .proposalInputTask {
     color: hsl(46, 84%, 39%);
 }
-
