--- a/src/frontend/core/components/alternative/Alternative.css
+++ b/src/frontend/core/components/alternative/Alternative.css
@@ -1,5 +1,6 @@
 .alternativeBody {
-    background-color: hsl(0, 0%, 18%);
+
+
     margin-left: 0.5vw;
     margin-right: 1.5vw;
     display: flex;
@@ -21,18 +22,16 @@
     position: sticky;
 }
 
-.alternativeHeaderTopLine {
-    border-right: 8px solid white;
-    background-color: hsl(0, 0%, 28%);
-    height: 8px;
-    width: calc(100% - 8px);
-}
-
 .alternativeHeaderTitle {
+
+    background-color: hsl(0, 0%, 28%);
+
     text-align: center;
     font-size: 1.5rem;
     width: 100%;
+    border-bottom: 1px solid white;
 }
+
 
 .alternativeHeaderMain {
     display: flex;
