--- a/src/frontend/core/components/snippet/snippet.css
+++ b/src/frontend/core/components/snippet/snippet.css
@@ -94,6 +94,7 @@
     border-style: solid;
     border-width: 1px;
     border-top-width: 0;
+    overflow-y: auto;
 }
 
 .snippetCode {
@@ -134,7 +135,7 @@
     width: 41vw;
     text-align: center;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
     color: hsl(120, 100%, 62%);
     background-color: hsl(0, 0%, 28%);
@@ -149,8 +150,8 @@
     width: 41vw;
     text-align: center;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-end;
     color: hsl(60, 100%, 59%);
     background-color: hsl(0, 0%, 28%);
     border-style: solid;
@@ -158,6 +159,12 @@
     border-color: hsl(46, 84%, 39%);
     font-size: 1.2rem;
     font-family: 'Old English Text MT', 'Arial Narrow', Arial, sans-serif;
+}
+
+.snippetRightHeader a {
+    margin-left: auto;
+    stroke: white;
+    fill: transparent;
 }
 
 .headerDropdownLabel {
