--- a/src/frontend/core/commonComponents/editableList/editableList.css
+++ b/src/frontend/core/commonComponents/editableList/editableList.css
@@ -49,7 +49,7 @@
 }
 
 .editableListAddButton {
-    padding: 0.5rem;    
+    padding: 0.5rem;
 }
 
 .editableListAddButton input {
@@ -74,6 +74,6 @@
     margin: 0.5rem;
 }
 
-.editableListSaveButton input {
+.editableListSaveButton > input {
     cursor: pointer;
 }
