--- a/src/frontend/core/app.css
+++ b/src/frontend/core/app.css
@@ -21,3 +21,10 @@ code {
 .rightMost {
     margin-left: auto;
 }
+
+.svCheckbox {
+    width: 12px;
+    height: 12px;
+    border: 2px solid black;
+    background-color: white;
+}
