--- a/src/frontend/core/components/alternative/Alternative.css
+++ b/src/frontend/core/components/alternative/Alternative.css
@@ -46,6 +46,7 @@
 }
 
 .alternativeHeaderMain {
+    padding-top: 0.5rem;
     display: flex;
     justify-content: flex-start;
     align-items: top;
